--- a/books/HistoryClimate/reader_browser_scrolling.html
+++ b/books/HistoryClimate/reader_browser_scrolling.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Браузерный ридер — История климата (скролл, v3)</title>
+  <title>Браузерный ридер — История климата (скролл, v4 normalize)</title>
   <style>
     :root {
       --bg: #0b0b0c;
@@ -16,91 +16,35 @@
     }
     * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
     html, body { height: 100%; }
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--fg);
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
-      overscroll-behavior: none;
-    }
-
+    body { margin: 0; background: var(--bg); color: var(--fg);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif; }
     .topbar, .bottombar {
       position: fixed; left: 0; right: 0; z-index: 1000;
       display: flex; align-items: center; gap: 12px;
       padding: env(safe-area-inset-top) 12px 12px 12px;
-      backdrop-filter: var(--bar-blur);
-      background: var(--bar);
+      backdrop-filter: var(--bar-blur); background: var(--bar);
     }
     .topbar { top: 0; }
-    .bottombar {
-      bottom: 0; top: auto; padding: 10px 12px calc(10px + env(safe-area-inset-bottom)) 12px;
-      justify-content: space-between;
-    }
-
-    .btn {
-      appearance: none; border: 0; border-radius: 12px; padding: 8px 12px;
-      background: rgba(255,255,255,0.06); color: var(--fg); font-size: 16px;
-      cursor: pointer;
-    }
+    .bottombar { bottom: 0; top: auto; padding: 10px 12px calc(10px + env(safe-area-inset-bottom)) 12px; justify-content: space-between; }
+    .btn { border: 0; border-radius: 12px; padding: 8px 12px; background: rgba(255,255,255,0.06); color: var(--fg); font-size: 16px; cursor: pointer; }
     .btn:active { background: rgba(255,255,255,0.1); }
-    .meta { font-size: 13px; color: var(--muted); }
-    .spacer { flex: 1; }
-
-    .pages {
-      position: relative;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding-top: calc(48px + env(safe-area-inset-top));
-      padding-bottom: calc(70px + env(safe-area-inset-bottom));
-    }
-    .page {
-      display: grid; place-items: center;
-      margin: 12px auto;
-      width: 100%;
-    }
-    .page canvas {
-      display: block;
-      background: var(--pagebg);
-      box-shadow: 0 6px 26px rgba(0,0,0,0.36);
-    }
-    .page .pnum {
-      margin-top: 6px;
-      font-size: 12px;
-      color: var(--muted);
-      user-select: none;
-    }
-
-    .overlay {
-      position: fixed; inset: 0; background: rgba(0,0,0,0.35);
-      z-index: 1200; opacity: 0; pointer-events: none; transition: opacity .2s ease;
-    }
+    .meta { font-size: 13px; color: var(--muted); } .spacer { flex: 1; }
+    .pages { position: relative; width: 100%; max-width: 1200px; margin: 0 auto;
+      padding-top: calc(48px + env(safe-area-inset-top)); padding-bottom: calc(70px + env(safe-area-inset-bottom)); }
+    .page { display: grid; place-items: center; margin: 12px auto; width: 100%; }
+    .page canvas { display: block; background: var(--pagebg); box-shadow: 0 6px 26px rgba(0,0,0,0.36); }
+    .pnum { margin-top: 6px; font-size: 12px; color: var(--muted); user-select: none; }
+    .overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.35); z-index: 1200; opacity: 0; pointer-events: none; transition: opacity .2s; }
     .overlay.show { opacity: 1; pointer-events: auto; }
-    .drawer {
-      position: fixed; top: 0; bottom: 0; right: 0; width: min(88vw, 380px);
-      z-index: 1300; background: #121316; border-left: 1px solid #202124;
-      transform: translateX(100%); transition: transform .25s ease;
-      display: flex; flex-direction: column;
-    }
+    .drawer { position: fixed; top: 0; bottom: 0; right: 0; width: min(88vw, 380px);
+      z-index: 1300; background: #121316; border-left: 1px solid #202124; transform: translateX(100%); transition: transform .25s; display: flex; flex-direction: column; }
     .drawer.open { transform: translateX(0); }
     .drawer header { padding: 16px; border-bottom: 1px solid #202124; font-weight: 600; }
     .drawer .toc { flex: 1; overflow: auto; padding: 6px 8px 16px 8px; }
-    .toc button {
-      width: 100%; text-align: left; padding: 10px 12px; margin: 6px 4px;
-      background: transparent; color: var(--fg); border: 1px solid #202124; border-radius: 10px;
-      font-size: 15px; cursor: pointer;
-    }
-    .toc button:active { background: rgba(255,255,255,0.06); }
-
-    .zoom-pack { display: flex; align-items: center; gap: 8px; }
-    input[type="range"] { width: 200px; }
-
-    .progress {
-      position: fixed; left: 0; right: 0; bottom: 0;
-      height: 3px; background: rgba(255,255,255,0.08); z-index: 900;
-      transform: translateY(-3px);
-    }
-    .progress > span { display: block; height: 100%; width: 0; background: var(--accent); transition: width .2s ease; }
+    .toc button { width: 100%; text-align: left; padding: 10px 12px; margin: 6px 4px; background: transparent; color: var(--fg);
+      border: 1px solid #202124; border-radius: 10px; font-size: 15px; cursor: pointer; }
+    .progress { position: fixed; left: 0; right: 0; bottom: 0; height: 3px; background: rgba(255,255,255,0.08); z-index: 900; transform: translateY(-3px); }
+    .progress > span { display: block; height: 100%; width: 0; background: var(--accent); transition: width .2s; }
   </style>
 </head>
 <body>
@@ -110,24 +54,18 @@
     <div class="spacer"></div>
     <div class="meta" id="zoomMeta">100%</div>
   </div>
-
   <div class="bottombar">
-    <div class="zoom-pack">
+    <div>
       <button id="zoomOut" class="btn">−</button>
       <input id="zoomSlider" type="range" min="60" max="220" value="100" step="5">
       <button id="zoomIn" class="btn">+</button>
     </div>
   </div>
-
   <div class="pages" id="pages"></div>
   <div class="progress"><span id="progressBar"></span></div>
-
   <div class="overlay" id="overlay"></div>
   <aside class="drawer" id="drawer">
-    <header>
-      Содержание
-      <div class="meta">Коснитесь главы для перехода</div>
-    </header>
+    <header>Содержание<div class="meta">Коснитесь главы для перехода</div></header>
     <div class="toc" id="tocList"></div>
   </aside>
 
@@ -151,10 +89,9 @@
     const zoomMeta = document.getElementById('zoomMeta');
 
     let pdfDoc = null, totalPages = 0;
-    let originalPageWidth = null;
-    let fitScaleSnapshot = 1;   // recomputed per rerender cycle
-    let userScale = 1.0;        // 1.0 = fit-to-width
     let dpr = window.devicePixelRatio || 1;
+    let userScale = 1.0; // 100% = fit container width
+    let pageMetaCache = {}; // pageNum -> {w,h} at scale 1
     let resizeTimer = null;
 
     const tocEntries = [
@@ -172,13 +109,8 @@
     ];
 
     tocEntries.forEach(ent => {
-      const b = document.createElement('button');
-      b.textContent = ent.title;
-      b.addEventListener('click', () => {
-        const target = document.querySelector('[data-page="' + ent.page + '"]');
-        if (target) target.scrollIntoView({behavior:'smooth', block:'start'});
-        closeDrawer();
-      });
+      const b = document.createElement('button'); b.textContent = ent.title;
+      b.addEventListener('click', () => { const t = document.querySelector('[data-page="' + ent.page + '"]'); if (t) t.scrollIntoView({behavior:'smooth', block:'start'}); closeDrawer(); });
       tocList.appendChild(b);
     });
 
@@ -188,41 +120,25 @@
     overlay.addEventListener('click', closeDrawer);
     window.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeDrawer(); });
 
-    function containerCssWidth() {
-      return Math.floor(pagesEl.getBoundingClientRect().width);
-    }
+    function containerWidth() { return Math.floor(pagesEl.getBoundingClientRect().width); }
 
-    function snapshotFitScale() {
-      if (!originalPageWidth) return 1;
-      return containerCssWidth() / originalPageWidth;
-    }
-
-    pdfjsLib.getDocument(PDF_URL).promise.then(pdf => {
+    pdfjsLib.getDocument(PDF_URL).promise.then(async pdf => {
       pdfDoc = pdf; totalPages = pdf.numPages;
 
+      // Pre-read page 1 to ensure worker warm, then create shells
       for (let i = 1; i <= totalPages; i++) {
         const holder = document.createElement('div');
-        holder.className = 'page';
-        holder.dataset.page = String(i);
-
-        const canvas = document.createElement('canvas');
-        canvas.id = 'p' + i;
-        holder.appendChild(canvas);
-
-        const caption = document.createElement('div');
-        caption.className = 'pnum';
-        caption.textContent = 'Страница ' + i;
-        holder.appendChild(caption);
-
+        holder.className = 'page'; holder.dataset.page = String(i);
+        const canvas = document.createElement('canvas'); canvas.id = 'p' + i; holder.appendChild(canvas);
+        const caption = document.createElement('div'); caption.className = 'pnum'; caption.textContent = 'Страница ' + i; holder.appendChild(caption);
         pagesEl.appendChild(holder);
       }
 
       observeAndRender();
-      updateProgress();
-      updateMetaFromViewport();
+      updateProgress(); updateMetaFromViewport();
     }).catch(err => console.error('PDF load error:', err));
 
-    // Lazy rendering
+    // IO lazy render
     let io = null;
     function observeAndRender() {
       if (io) io.disconnect();
@@ -235,46 +151,43 @@
           await renderPage(pageIndex, canvas);
         }
       }, { root: null, rootMargin: '1600px 0px', threshold: 0.01 });
-
       document.querySelectorAll('.page').forEach(p => io.observe(p));
     }
 
-    async function renderPage(pageNum, canvas) {
+    async function ensurePageMeta(pageNum) {
+      if (pageMetaCache[pageNum]) return pageMetaCache[pageNum];
       const page = await pdfDoc.getPage(pageNum);
-      if (!originalPageWidth) {
-        originalPageWidth = page.getViewport({ scale: 1 }).width;
-      }
-      if (!fitScaleSnapshot) fitScaleSnapshot = 1;
-      const effScale = fitScaleSnapshot * userScale;
+      const vp = page.getViewport({ scale: 1 });
+      const meta = { w: vp.width, h: vp.height, page };
+      pageMetaCache[pageNum] = meta;
+      return meta;
+    }
 
-      const viewport = page.getViewport({ scale: effScale });
-      const cssW = Math.round(viewport.width);
-      const cssH = Math.round(viewport.height);
+    async function renderPage(pageNum, canvas) {
+      const meta = await ensurePageMeta(pageNum);
+      const cw = containerWidth();
+      const cssW = Math.max(100, Math.round(cw * userScale)); // unified CSS width for ALL pages
+      const cssH = Math.round(cssW * (meta.h / meta.w));       // per-page aspect ratio
       const pxW = Math.floor(cssW * dpr);
       const pxH = Math.floor(cssH * dpr);
 
-      if (canvas.width !== pxW || canvas.height !== pxH) {
-        canvas.width = pxW; canvas.height = pxH;
-      }
-      canvas.style.width = cssW + 'px';
-      canvas.style.height = cssH + 'px';
+      if (canvas.width !== pxW || canvas.height !== pxH) { canvas.width = pxW; canvas.height = pxH; }
+      canvas.style.width = cssW + 'px'; canvas.style.height = cssH + 'px';
 
+      const viewport = meta.page.getViewport({ scale: cssW / meta.w });
       const ctx = canvas.getContext('2d', { alpha: false });
       const rc = { canvasContext: ctx, viewport, transform: dpr !== 1 ? [dpr,0,0,dpr,0,0] : null };
-      await page.render(rc).promise;
+      await meta.page.render(rc).promise;
       canvas.dataset.rendered = '1';
-
-      updateProgress();
-      updateMetaFromViewport();
+      updateProgress(); updateMetaFromViewport();
     }
 
     function rerenderVisible(forceAll=false) {
-      fitScaleSnapshot = snapshotFitScale();
       const pages = document.querySelectorAll('.page');
       const vh = window.innerHeight;
       pages.forEach(p => {
-        const rect = p.getBoundingClientRect();
-        const near = rect.top < vh*2 && rect.bottom > -vh*1;
+        const r = p.getBoundingClientRect();
+        const near = r.top < vh*2 && r.bottom > -vh*1;
         if (near || forceAll) {
           const pageNum = parseInt(p.dataset.page, 10);
           const canvas = p.querySelector('canvas');
@@ -284,7 +197,6 @@
       });
     }
 
-    // Zoom (100% = fit-to-width)
     function setUserScaleFromSlider(v) {
       userScale = Math.max(0.6, Math.min(2.2, v / 100));
       zoomMeta.textContent = Math.round(userScale * 100) + '%';
@@ -294,14 +206,12 @@
     zoomInBtn.addEventListener('click', () => { zoomSlider.value = Math.min(220, parseInt(zoomSlider.value,10) + 10); setUserScaleFromSlider(parseInt(zoomSlider.value,10)); });
     zoomOutBtn.addEventListener('click', () => { zoomSlider.value = Math.max(60, parseInt(zoomSlider.value,10) - 10); setUserScaleFromSlider(parseInt(zoomSlider.value,10)); });
 
-    // Progress & meta
     function updateProgress() {
       const scrollY = window.scrollY || document.documentElement.scrollTop || 0;
       const full = document.documentElement.scrollHeight - window.innerHeight;
       const percent = full > 0 ? Math.max(0, Math.min(100, Math.round(scrollY / full * 100))) : 0;
       progressBar.style.width = percent + '%';
     }
-
     function updateMetaFromViewport() {
       const pages = document.querySelectorAll('.page');
       let bestPage = 1, bestDist = Infinity;
@@ -313,16 +223,10 @@
       });
       pageMeta.textContent = 'Стр. ' + bestPage + ' / ' + totalPages;
     }
-
     window.addEventListener('scroll', () => { updateProgress(); updateMetaFromViewport(); }, {passive:true});
-
-    // Debounced resize -> single consistent rerender snapshot
     window.addEventListener('resize', () => {
       window.clearTimeout(resizeTimer);
-      resizeTimer = window.setTimeout(() => {
-        dpr = window.devicePixelRatio || 1;
-        rerenderVisible(true);
-      }, 120);
+      resizeTimer = window.setTimeout(() => { dpr = window.devicePixelRatio || 1; rerenderVisible(true); }, 120);
     });
   </script>
 </body>
